<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".botonesCliente">

    <Button
        android:id="@+id/btnInformacion"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:text="@string/Informacion"
        app:layout_constraintBottom_toTopOf="@+id/btnProductos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:layout_marginBottom="120dp"
        android:text="@string/Productos"
        app:layout_constraintBottom_toTopOf="@+id/btnChat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnChat"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:layout_marginBottom="188dp"
        android:text="@string/Chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>