<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Iniciar_sesion">

    <androidx.cardview.widget.CardView
        android:layout_width="426dp"
        android:layout_height="740dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" >>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/Email"
                android:layout_width="309dp"
                android:layout_height="50dp"
                android:layout_marginTop="344dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Contraseña"
                android:layout_width="311dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/contrasenha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Email" />

            <Button
                android:id="@+id/crearCuenta"
                android:layout_width="307dp"
                android:layout_height="56dp"
                android:layout_marginTop="120dp"
                android:text="@string/crear_cuenta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Contraseña"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/iniciarSesion"
                android:layout_width="307dp"
                android:layout_height="56dp"
                android:layout_marginTop="28dp"
                android:text="@string/iniciar_sesion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Contraseña" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>








</androidx.constraintlayout.widget.ConstraintLayout>