<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="320dp"
        android:layout_height="221dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/tvDescripcionTienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/imprenta" />

    <TextView
        android:id="@+id/telefonoTienda"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Telefono"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toStartOf="@+id/numTelefono"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/numTelefono"
        android:layout_width="237dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="628001467"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvEmailCampo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionTienda"
        app:layout_constraintVertical_bias="0.166"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/email"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvDireccion"
        app:layout_constraintEnd_toStartOf="@+id/tvEmailCampo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEmailCampo"
        android:layout_width="238dp"
        android:layout_height="42dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:text="sobrelalinea@gmail.com"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvDireccionCampo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Direccion"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvLocalidad"
        app:layout_constraintEnd_toStartOf="@+id/tvDireccionCampo"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDireccionCampo"
        android:layout_width="241dp"
        android:layout_height="41dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="12dp"
        android:text="C/Menendez Pelayo 3 Bajo"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvLocalidadCampo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLocalidad"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Localidad"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvCodiPostal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLocalidadCampo"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:text="Laredo"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvCodigoPostalCampo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLocalidad" />

    <TextView
        android:id="@+id/tvCodiPostal"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="36dp"
        android:text="@string/codigoPostal"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvCodigoPostalCampo"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCodigoPostalCampo"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:text="39770"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/tvDescripcionTienda"
        android:layout_width="314dp"
        android:layout_height="85dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/descripcionTienda"
        app:layout_constraintBottom_toTopOf="@+id/telefonoTienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>